@@ -74,34 +74,62 @@
             <version>3.9.6</version>
         </dependency>
 
-    </dependencies>
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.25.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>4.18.1</version>
+            <scope>test</scope>
+        </dependency>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
-                <configuration>
-                    <parallel>none</parallel>
-                    <threadCount>10</threadCount>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <!--
-                    <suiteXmlFiles>
-                        <suiteXmlFile>12ParallelTestExecution.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                    -->
-                    <includes>
-                        <include>13AllureTest.xml</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    </dependencies>
+   <build>
+
+    <plugins>
+        <!-- Failsafe plugin to help test failures to be ignored -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.0.0-M1</version>
+            <configuration>
+                <testFailureIgnore>true</testFailureIgnore>
+                <skipTests>false</skipTests>
+                <includes>
+                    <include>runners/pages.java</include>
+                </includes>
+            </configuration>
+        </plugin>
+
+
+        <!-- Surefire plugin used to run tests in parallel, parallel execution settings are configured. -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M1</version>
+            <configuration>
+                <parallel>methods</parallel>
+                <forkMode>perthread</forkMode>
+                <threadCount>3</threadCount>
+                <reuseForks>false</reuseForks>
+                <argLine>-Duser.language=en</argLine>
+                <argLine>-Xmx1024m</argLine>
+                <argLine>-XX:MaxPermSize=256m</argLine>
+                <argLine>-Dfile.encoding=UTF-8</argLine>
+                <useFile>false</useFile>
+                <includes>
+                    <include>tests/companyProcess/US0006.java</include> <!-- Specify the pages class to run here -->
+                </includes>
+                <testFailureIgnore>true</testFailureIgnore>
+                <suiteXmlFiles>testng.xml</suiteXmlFiles>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 
 </project>
